# ALLIANCE

./: CMakeLists.txt  array.c  array.h  diagnostics.c  diagnostics.h  distrib.c  distrib.h  equation.c  equation.h  fftw_utils.c  fftw_utils.h  fields.c  fields.h  hdf_utils.c  hdf_utils.h  init.c  init.h  main.c  master.c  master.h  mpi_utils.c  mpi_utils.h  parameters_io.c  parameters_io.h  solver.c  solver.h  space_config.c  space_config.h  tests.c  tests.h  variables.c  variables.h
doc/: alliancedoc  genscript.sh
post/: ControlOfAlliance.ipynb  alliance_postpr.ipynb  stability_region.ipynb
src/: array.c  array.h  diagnostics.c  diagnostics.h  distrib.c  distrib.h  equation.c  equation.h  fftw_utils.c  fftw_utils.h  fields.c  fields.h  init.c  init.h  main.c  parameters_io.c  parameters_io.h  solver.c  solver.h  space_config.c  space_config.h  tests.c  tests.h  utils_fftw.c  utils_fftw.h  utils_hdf.c  utils_hdf.h  utils_mpi.c  utils_mpi.h  utils_tests.c  utils_tests.h  variables.c  variables.h
