cmake_minimum_required(VERSION 3.20)
project(Alliance_alpha_1_0 C)

set(CMAKE_C_STANDARD 11)
find_package(MPI REQUIRED)
include_directories(${MPI_INCLUDE_PATH})
find_package(HDF5 REQUIRED)
set(HDF5_PREFER_PARALLEL TRUE)
include_directories("/home/alcauchy/hdf5/hdf5/include")
add_executable(Alliance_alpha_1_0 main.c mpi_utils.h mpi_utils.c fftw_utils.c fftw_utils.h hdf_utils.h hdf_utils.c parameters_io.c parameters_io.h diagnostics.h diagnostics.c array.h array.c)
target_link_libraries(Alliance_alpha_1_0 "/home/alcauchy/hdf5/hdf5/lib/libhdf5.so")
target_link_libraries(Alliance_alpha_1_0 "/usr/local/lib/libfftw3_mpi.a")
target_link_libraries(Alliance_alpha_1_0 "/usr/local/lib/libfftw3.a")
target_link_libraries(Alliance_alpha_1_0 fftw3_mpi)
target_link_libraries(Alliance_alpha_1_0 fftw3)
target_link_libraries(Alliance_alpha_1_0 m)